Enable M1 builds (#733)